--- a/10-intro-to-active-record/Rakefile
+++ b/10-intro-to-active-record/Rakefile
@@ -8,3 +8,8 @@ task :console do
   # open Pry console, similar to binding.pry
   Pry.start
 end
+
+desc "Cowboy Printer"
+task :print_cowboys do
+  puts "🤠" * 100
+end
