--- a/20-rails-associations/movie_magic/Gemfile
+++ b/20-rails-associations/movie_magic/Gemfile
@@ -7,6 +7,9 @@ gem "dotenv-rails"
 gem 'rest-client'
 gem 'json'
 
+
+gem 'faker', :git => 'https://github.com/faker-ruby/faker.git', :branch => 'master'
+
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '~> 5.2.4', '>= 5.2.4.1'
 # Use sqlite3 as the database for Active Record
